versions/v4.2.0/doxygen/html/dir_9486826309e816a7a1c2256ae23b5ea4.md
---
version: v4.2.0
source_url: https://docs.zephyrproject.org/4.2.0/doxygen/html/dir_9486826309e816a7a1c2256ae23b5ea4.html
original_path: doxygen/html/dir_9486826309e816a7a1c2256ae23b5ea4.html
---

| Logo | Zephyr API Documentation 4.2.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

gpio Directory Reference

| Files | |
| --- | --- |
| [  ](adi-max32-gpio_8h_source.md) | [adi-max32-gpio.h](adi-max32-gpio_8h.md) |
| [  ](adi-sdp-120_8h_source.md) | [adi-sdp-120.h](adi-sdp-120_8h.md) |
|  | Copyright (c) 2024 Analog Devices Inc. |
| [  ](andestech-atcgpio100_8h_source.md) | [andestech-atcgpio100.h](andestech-atcgpio100_8h.md) |
| [  ](arduino-header-r3_8h_source.md) | [arduino-header-r3.h](arduino-header-r3_8h.md) |
| [  ](arduino-mkr-header_8h_source.md) | [arduino-mkr-header.h](arduino-mkr-header_8h.md) |
| [  ](arduino-nano-header_8h_source.md) | [arduino-nano-header.h](arduino-nano-header_8h.md) |
| [  ](atmel-sam-gpio_8h_source.md) | [atmel-sam-gpio.h](atmel-sam-gpio_8h.md) |
| [  ](atmel-sam0-gpio_8h_source.md) | [atmel-sam0-gpio.h](atmel-sam0-gpio_8h.md) |
| [  ](digilent-pmod_8h_source.md) | [digilent-pmod.h](digilent-pmod_8h.md) |
|  | Pmod GPIO nexus signal index definitions. |
| [  ](dvp-20pin-connector_8h_source.md) | [dvp-20pin-connector.h](dvp-20pin-connector_8h.md) |
| [  ](ene-kb106x-gpio_8h_source.md) | [ene-kb106x-gpio.h](ene-kb106x-gpio_8h.md) |
| [  ](ene-kb1200-gpio_8h_source.md) | [ene-kb1200-gpio.h](ene-kb1200-gpio_8h.md) |
| [  ](espressif-esp32-gpio_8h_source.md) | [espressif-esp32-gpio.h](espressif-esp32-gpio_8h.md) |
| [  ](dt-bindings_2gpio_2gpio_8h_source.md) | [gpio.h](dt-bindings_2gpio_2gpio_8h.md) |
| [  ](infineon-xmc4xxx-gpio_8h_source.md) | [infineon-xmc4xxx-gpio.h](infineon-xmc4xxx-gpio_8h.md) |
| [  ](ite-it8xxx2-gpio_8h_source.md) | [ite-it8xxx2-gpio.h](ite-it8xxx2-gpio_8h.md) |
| [  ](microchip-xec-gpio_8h_source.md) | [microchip-xec-gpio.h](microchip-xec-gpio_8h.md) |
| [  ](nordic-npm13xx-gpio_8h_source.md) | [nordic-npm13xx-gpio.h](nordic-npm13xx-gpio_8h.md) |
| [  ](nordic-npm2100-gpio_8h_source.md) | [nordic-npm2100-gpio.h](nordic-npm2100-gpio_8h.md) |
| [  ](nordic-npm6001-gpio_8h_source.md) | [nordic-npm6001-gpio.h](nordic-npm6001-gpio_8h.md) |
| [  ](nordic-nrf-gpio_8h_source.md) | [nordic-nrf-gpio.h](nordic-nrf-gpio_8h.md) |
| [  ](numicro-gpio_8h_source.md) | [numicro-gpio.h](numicro-gpio_8h.md) |
| [  ](nuvoton-npcx-gpio_8h_source.md) | [nuvoton-npcx-gpio.h](nuvoton-npcx-gpio_8h.md) |
| [  ](nxp-imx-igpio_8h_source.md) | [nxp-imx-igpio.h](nxp-imx-igpio_8h.md) |
| [  ](nxp-kinetis-gpio_8h_source.md) | [nxp-kinetis-gpio.h](nxp-kinetis-gpio_8h.md) |
| [  ](nxp-s32-gpio_8h_source.md) | [nxp-s32-gpio.h](nxp-s32-gpio_8h.md) |
| [  ](raspberrypi-csi-connector_8h_source.md) | [raspberrypi-csi-connector.h](raspberrypi-csi-connector_8h.md) |
| [  ](realtek-gpio_8h_source.md) | [realtek-gpio.h](realtek-gpio_8h.md) |
| [  ](renesas-ra-gpio-ioport_8h_source.md) | [renesas-ra-gpio-ioport.h](renesas-ra-gpio-ioport_8h.md) |
| [  ](renesas-rz-gpio_8h_source.md) | [renesas-rz-gpio.h](renesas-rz-gpio_8h.md) |
| [  ](renesas-rza2m-gpio_8h_source.md) | [renesas-rza2m-gpio.h](renesas-rza2m-gpio_8h.md) |
| [  ](renesas-rzt2m-gpio_8h_source.md) | [renesas-rzt2m-gpio.h](renesas-rzt2m-gpio_8h.md) |
| [  ](renesas-rztn-gpio_8h_source.md) | [renesas-rztn-gpio.h](renesas-rztn-gpio_8h.md) |
| [  ](semtech-sx1509b_8h_source.md) | [semtech-sx1509b.h](semtech-sx1509b_8h.md) |
| [  ](snps-designware-gpio_8h_source.md) | [snps-designware-gpio.h](snps-designware-gpio_8h.md) |
| [  ](st-morpho-header_8h_source.md) | [st-morpho-header.h](st-morpho-header_8h.md) |
| [  ](stm32-gpio_8h_source.md) | [stm32-gpio.h](stm32-gpio_8h.md) |
| [  ](ti-cc13xx-cc26xx-gpio_8h_source.md) | [ti-cc13xx-cc26xx-gpio.h](ti-cc13xx-cc26xx-gpio_8h.md) |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [dt-bindings](dir_2e4d86f9d28357ce2f99093c0845149c.md)
- [gpio](dir_9486826309e816a7a1c2256ae23b5ea4.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/4.2.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
